# neurobotics

./: automation.py
neuro_deep_planner/: README.md
neuro_deep_planner/src/: actor.py  autoencoder.py  critic.py  data_manager.py  ddpg.py  grad_inverter.py  neuro_costmap_planner_node.py  neuro_deep_planner_node.py  neuro_input_visualizer.py  neuro_video_planner_node.py  ros_handler.py
neuro_deep_planner/src/data_manager/: replay_buffer.py
neuro_deep_planner/src/ddpg/: actor.py  critic.py  ddpg.py  frontend.py  grad_inverter.py
neuro_deep_planner/src/dqn/: dqn.py  dqn_data_manager.py  dqn_replay_buffer.py  value.py
neuro_deep_planner/src/front_end/: __init__.py  video_ros.py
neuro_local_planner_wrapper/: CMakeLists.txt  package.xml
neuro_local_planner_wrapper/include/neuro_local_planner_wrapper/: neuro_local_planner_wrapper.h
neuro_local_planner_wrapper/src/: neuro_local_planner_wrapper.cpp
neuro_stage_ros/src/: stageros.cpp
neuro_stage_sim/: CMakeLists.txt  Readme.md  package.xml
neuro_stage_sim/include/neuro_fake_recovery/: neuro_fake_recovery.h
neuro_stage_sim/launch/: move_base.launch.xml  neuro_stage_sim.launch
neuro_stage_sim/maps/: map_01_200x200.yaml  map_01_400x400.yaml  map_02_200x200.yaml  map_base_200x200.yaml  map_house_01_200x200.yaml
neuro_stage_sim/param/: costmap_common_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  move_base_params_train.yaml  neuro_local_planner_params.yaml  neuro_local_planner_params_train.yaml
neuro_stage_sim/rviz/: robot_navigation.rviz
neuro_stage_sim/src/: neuro_fake_recovery.cpp  neuro_training_bot.cpp
neuro_stage_sim/urdf/: robot.urdf.xacro
(+6 files in other folders)
